<resources>
    <string name="app_name">SoSimpleCounter</string>
    <string name="action_about">About</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_edit">Edit Counter</string>
    <string name="preference_file_key">counter</string>
    <string name="preference_name">preference_name</string>
    <string name="preference_date_year">preference_date_year</string>
    <string name="preference_date_month">preference_date_month</string>
    <string name="preference_date_day">preference_date_day</string>

    <string name="explanation">Edit the counter to set a name and a date. Then use our launcher to add a widget to your home screen.</string>
    <string name="edit_counter">Edit counter</string>
    <string name="name">Name</string>
    <string name="save">Save</string>
    <string name="clear_counter">Clear counter</string>
    <string name="error_no_name">Please enter a name</string>
    <string name="toast_error_no_name">You have to enter a name to save the counter. Use back to cancel editing.</string>
    <string name="current_counter">Current counter</string>

    <plurals name="counter_result">
        <item quantity="one">%d day remaining</item>
        <item quantity="other">%d days remaining</item>
    </plurals>

    <plurals name="counter_unit">
        <item quantity="one">day</item>
        <item quantity="other">days</item>
    </plurals>

    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_licenses">Licenses</string>

    <string name="pref_header_about">About</string>
    <string name="pref_licences_title">Licences</string>
    <string name="pref_version_title">@string/app_name</string>
    <string name="pref_version_description">Version 1.0</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
</resources>